fix(testimonials scroll bar): fix width on mobile

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -212,6 +212,7 @@ body {
 .testimony-card {
     position: relative;
     width: 250px;
+    min-width: 250px;
     height: 400px;
     background-color: #EBEEEF;
     overflow: hidden;
